# cloud-landerox-data

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Justfile  README.md  codecov.yml  pyproject.toml
.config/: .gitleaks.toml  .secrets.baseline  gitleaks.toml  lychee.toml  markdownlint.yaml  yamllint.yaml
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/scripts/: check_licenses.py
.github/workflows/: codeql.yml  link-check.yml  lint.yml  nightly.yml  release.yml  scorecard.yml  semgrep.yml  trivy.yml
dataflow/: README.md
dataflow/examples/gold_summary/: pipeline.py
dataflow/examples/template/: Dockerfile  metadata.json  pipeline.py  requirements.txt
dataflow/pipelines/: README.md
docs/: architecture.md  cicd.md  tech-stack.md  versioning.md
docs/adr/: 0001-hybrid-gcp-data-platform.md  0002-kappa-when-to-use.md  0003-storage-table-format-strategy.md  0004-batch-streaming-operating-model.md  README.md
docs/blueprints/: first-e2e-pipeline.md  first-runtime-scope.md  step-3-private-runtime-checklist.md
docs/blueprints/templates/: README.md
docs/blueprints/templates/config/: config.template.json
docs/blueprints/templates/contracts/: source_events_v1.schema.json
docs/diagrams/: 01-context-overview.md  02-e2e-controls.md  03-dataflow-shared.md  03a-dataflow-streaming.md  03b-dataflow-batch-replay.md  04-functions-shared.md  04a-functions-ingestion-http.md  04b-functions-trigger-orchestration.md  05-storage-hybrid-bq-lakehouse.md  README.md
docs/guides/: coding-style.md  dataflow.md  error-handling.md  functions.md  gcp-project-baseline.md  observability.md  security.md  testing.md
functions/: README.md
functions/examples/ingestion_template/: main.py
functions/examples/trigger_template/: main.py
functions/ingestion/: README.md
functions/trigger/: README.md
shared/: README.md  __init__.py
shared/common/: __init__.py  dlq.py  exceptions.py  io.py  logging.py  metrics.py  retry.py  secrets.py  tracing.py  validation.py
tests/: README.md  conftest.py  test_doc_coherence.py  test_repository_layout.py
tests/dataflow/: README.md
tests/dataflow/examples/template/: test_pipeline.py
tests/functions/: README.md
tests/functions/examples/ingestion_template/: test_main.py
tests/functions/examples/trigger_template/: test_main.py
tests/shared/common/: test_benchmarks.py  test_dlq.py  test_io.py  test_logging.py  test_metrics.py  test_package_exports.py  test_property_based.py  test_retry.py  test_secrets.py  test_tracing.py  test_validation.py
