[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cloud-landerox-data"
version = "1.0.0"
description = "Serverless data ingestion, streaming analytics, and batch processing pipelines on Google Cloud Platform."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }
authors = [{ name = "Fernando Landero", email = "landerox@gmail.com" }]
keywords = [
    "gcp",
    "google-cloud-platform",
    "cloud-functions",
    "google-cloud-dataflow",
    "apache-beam",
    "etl",
    "python",
    "data-engineering",
    "serverless",
    "streaming",
    "batch-processing",
    "bigquery",
    "cloud-storage",
    "stochastic-data",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "apache-beam>=2.71.0",
    "functions-framework>=3.10.0",
    "google-cloud-bigquery>=3.40.0",
    "google-cloud-secret-manager>=2.26.0",
    "google-cloud-storage>=3.9.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.7",
    "detect-secrets>=1.5.0",
    "freezegun>=1.5.5",
    "pip-audit>=2.10.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.15.0",
    "ty>=0.0.16",
]

[project.urls]
Homepage = "https://github.com/landerox"
Repository = "https://github.com/landerox/cloud-landerox-data"
Documentation = "https://github.com/landerox/cloud-landerox-data/tree/main/docs"
Issues = "https://github.com/landerox/cloud-landerox-data/issues"

[tool.uv]
package = false

[tool.hatch.build.targets.wheel]
packages = []

[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "v$version"
version_files = ["pyproject.toml:^version"]
update_changelog_on_bump = true
changelog_file = ".github/CHANGELOG.md"

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "RUF", # ruff-specific
]
ignore = [
    "E501",    # line too long (formatter handles this)
    "PLR0913", # too many arguments
    "PLR2004", # magic value comparison
]

[tool.ty.rules]
all = "error"

[tool.ruff.lint.isort]
known-first-party = []
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.pytest.ini_options]
# Automatically add the current directory to PYTHONPATH
pythonpath = ["."]
# Silence noisy warnings from external libraries
filterwarnings = [
    "ignore:cannot collect test class 'TestPipeline':pytest.PytestCollectionWarning",
    "ignore::DeprecationWarning:httplib2.*",
]
